--- a/julia/problem_004.ipynb
+++ b/julia/problem_004.ipynb
@@ -21,82 +21,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf638d4",
+   "id": "cbb2f265",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (no string conversion)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d3d90ebf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "largest_palindrome_product (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function largest_palindrome_product(n)\n",
-    "    lo = 10^(n-1)\n",
-    "    hi = (10^n)-1\n",
-    "    palindrome_products = []\n",
-    "    for i in lo:hi\n",
-    "        for j in lo:hi\n",
-    "            if string(i*j) == string(i*j)[end:-1:begin] # string operation\n",
-    "                push!(palindrome_products, i*j)\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "    return maximum(palindrome_products)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fa8b4db6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  103.812 ms (6484949 allocations: 290.58 MiB)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "906609"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "@btime largest_palindrome_product(3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cbb2f265",
-   "metadata": {},
-   "source": [
-    "#### Solution 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "55e46c00",
    "metadata": {},
    "outputs": [
@@ -117,7 +50,74 @@
     "    palindrome_products = []\n",
     "    for i in lo:hi\n",
     "        for j in lo:hi\n",
-    "            if digits(i*j) == reverse(digits(i*j)) # no string operation\n",
+    "            if digits(i*j) == reverse(digits(i*j))\n",
+    "                push!(palindrome_products, i*j)\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return maximum(palindrome_products)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3dcb61f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  64.039 ms (2434949 allocations: 253.22 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime largest_palindrome_product(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baf638d4",
+   "metadata": {},
+   "source": [
+    "#### Solution 2 (string conversion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d3d90ebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "largest_palindrome_product (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function largest_palindrome_product(n)\n",
+    "    lo = 10^(n-1)\n",
+    "    hi = (10^n)-1\n",
+    "    palindrome_products = []\n",
+    "    for i in lo:hi\n",
+    "        for j in lo:hi\n",
+    "            if string(i*j) == reverse(string(i*j))\n",
     "                push!(palindrome_products, i*j)\n",
     "            end\n",
     "        end\n",
@@ -129,14 +129,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3dcb61f7",
+   "id": "fa8b4db6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  64.048 ms (2434949 allocations: 253.22 MiB)\n"
+      "  44.531 ms (4054949 allocations: 154.62 MiB)\n"
      ]
     },
     {
@@ -158,13 +158,13 @@
    "id": "0aa3f737",
    "metadata": {},
    "source": [
-    "#### Solution 3"
+    "#### Solution 3 (minimize overhead)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "596e9a7c",
+   "id": "8b7d4a73",
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +181,14 @@
     "function largest_palindrome_product(n)\n",
     "    lo = 10^(n-1)\n",
     "    hi = (10^n)-1\n",
-    "    palindrome_products = []\n",
-    "    for prod in Set(i*j for i in lo:hi, j in lo:hi)\n",
-    "        if digits(prod) == reverse(digits(prod)) # no string operation\n",
-    "            push!(palindrome_products, prod)\n",
+    "    lpp = 0 # largest palindrome product\n",
+    "    for p in Set(i*j for i in lo:hi, j in lo:hi)\n",
+    "        s = string(p)\n",
+    "        if s == reverse(s) && p > lpp\n",
+    "            lpp = p\n",
     "        end\n",
     "    end\n",
-    "    return maximum(palindrome_products)\n",
+    "    return lpp\n",
     "end"
    ]
   },
@@ -201,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  30.545 ms (683887 allocations: 89.43 MiB)\n"
+      "  18.572 ms (682570 allocations: 42.30 MiB)\n"
      ]
     },
     {
@@ -216,6 +217,41 @@
    ],
    "source": [
     "@btime largest_palindrome_product(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a17c170",
+   "metadata": {},
+   "source": [
+    "#### Solution 4 (oneliner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "68f41b36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  23.806 ms (1137612 allocations: 61.40 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime maximum(p for p in Set(i*j for i in 100:999, j in 100:999) if string(p) == reverse(string(p)))"
    ]
   }
  ],
