--- a/julia/problem_005.ipynb
+++ b/julia/problem_005.ipynb
@@ -24,7 +24,7 @@
    "id": "3957408b",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (counter)"
    ]
   },
   {
@@ -44,28 +44,77 @@
     }
    ],
    "source": [
-    "function smallest_multiple(n::Int64)::Int64\n",
-    "    x = n\n",
-    "    while !all([x%i == 0 for i in 1:n])\n",
-    "        x += 1\n",
+    "function smallest_multiple(n)\n",
+    "    c = 1\n",
+    "    while !all([c%i == 0 for i in 1:n])\n",
+    "        c += 1\n",
     "    end\n",
-    "    return x\n",
+    "    return c\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2c3ae458",
+   "id": "ff0a8190",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  159.160 s (931169730 allocations: 31.22 GiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "@assert smallest_multiple(10) == 2520"
+    "@btime smallest_multiple(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f32d962f",
+   "metadata": {},
+   "source": [
+    "#### Solution 2 (iterator)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ae556c5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "smallest_multiple (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function smallest_multiple(n)\n",
+    "    for c in Iterators.countfrom()\n",
+    "        all([c%i == 0 for i in 1:n]) && return c\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "550f00d4",
    "metadata": {},
    "outputs": [
@@ -73,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  176.783 s (931169673 allocations: 31.22 GiB)\n"
+      "  158.918 s (931169730 allocations: 31.22 GiB)\n"
      ]
     },
     {
@@ -95,12 +144,12 @@
    "id": "f2dfeda4",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 3 (oneliner)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ea3d423d",
    "metadata": {},
    "outputs": [
@@ -108,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  311.556 ns (0 allocations: 0 bytes)\n"
+      "  318.367 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
