--- a/julia/problem_006.ipynb
+++ b/julia/problem_006.ipynb
@@ -24,7 +24,7 @@
    "id": "31e9065e",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (function)"
    ]
   },
   {
@@ -54,16 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d585b52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@assert sum_square_difference(10) == 2640"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -71,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.000 ns (0 allocations: 0 bytes)\n"
+      "  1.875 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -93,12 +83,12 @@
    "id": "7972b71f",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 2 (oneliner)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e370ce19",
    "metadata": {},
    "outputs": [
