--- a/julia/problem_007.ipynb
+++ b/julia/problem_007.ipynb
@@ -24,7 +24,7 @@
    "id": "2e32a6f8",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (oneliner)"
    ]
   },
   {
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.736 ms (0 allocations: 0 bytes)\n"
+      "  2.737 ms (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -59,7 +59,7 @@
    "id": "03de2dfb",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 2 (sieve of eratosthenes)"
    ]
   },
   {
@@ -110,16 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9d585b52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@assert eratosthenes(6)[end] == 13"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -127,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  11.767 ms (165621 allocations: 12.42 MiB)\n"
+      "  11.777 ms (165621 allocations: 12.42 MiB)\n"
      ]
     },
     {
@@ -141,7 +131,7 @@
     }
    ],
    "source": [
-    "@btime eratosthenes(10_001)[end]"
+    "@btime last(eratosthenes(10_001))"
    ]
   },
   {
