--- a/julia/problem_008.ipynb
+++ b/julia/problem_008.ipynb
@@ -34,7 +34,7 @@
    "id": "91800791",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (function)"
    ]
   },
   {
@@ -69,16 +69,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bf847f05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@assert largest_product(digit_series, 4) == 5832"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "c9067a4f",
    "metadata": {},
    "outputs": [
@@ -86,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  25.708 μs (988 allocations: 154.38 KiB)\n"
+      "  25.750 μs (988 allocations: 154.38 KiB)\n"
      ]
     },
     {
@@ -108,12 +98,12 @@
    "id": "b168ef10",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 2 (oneliner)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2edeeac7",
    "metadata": {},
    "outputs": [
@@ -121,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  72.917 μs (3198 allocations: 204.38 KiB)\n"
+      "  72.708 μs (3198 allocations: 204.38 KiB)\n"
      ]
     },
     {
