--- a/julia/problem_002.ipynb
+++ b/julia/problem_002.ipynb
@@ -24,7 +24,7 @@
    "id": "3c9f1c3e",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (build full sequence)"
    ]
   },
   {
@@ -56,14 +56,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3a7a1b89",
+   "id": "dba9ce86",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.363 μs (64 allocations: 5.25 KiB)\n"
+      "  1.363 μs (65 allocations: 5.58 KiB)\n"
      ]
     },
     {
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "@btime sum(f for f in fibonacci(4_000_000) if f%2 == 0)"
+    "@btime sum(filter(iseven, fibonacci(4_000_000)))"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "id": "84912ae6",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 2 (keep previous two)"
    ]
   },
   {
@@ -111,7 +111,9 @@
     "    while sum(previous_two) < n\n",
     "        push!(previous_two, sum(previous_two))\n",
     "        popfirst!(previous_two)\n",
-    "        iseven(previous_two[end]) && (counter += previous_two[end])\n",
+    "        if iseven(previous_two[end])\n",
+    "            counter += previous_two[end]\n",
+    "        end\n",
     "    end\n",
     "    return counter\n",
     "end"
@@ -127,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  332.031 ns (2 allocations: 160 bytes)\n"
+      "  326.786 ns (2 allocations: 160 bytes)\n"
      ]
     },
     {
