--- a/julia/problem_012.ipynb
+++ b/julia/problem_012.ipynb
@@ -20,38 +20,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ccb3d6e3",
+   "metadata": {},
+   "source": [
+    "#### Solution 1 (list of factors)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ed923949",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "triangular_number (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "triangular_number(n) = sum(1:n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3aeac7ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@assert triangular_number(7) == 28"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [
@@ -67,19 +45,19 @@
    ],
    "source": [
     "function factors(n)\n",
-    "    f = Int64[]\n",
+    "    list_of_factors = Int64[]\n",
     "    for i in 1:n\n",
     "        if n%i == 0\n",
-    "            push!(f, i)\n",
+    "            push!(list_of_factors, i)\n",
     "        end\n",
     "    end\n",
-    "    return(f)\n",
+    "    return list_of_factors\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b9481546",
    "metadata": {},
    "outputs": [],
@@ -89,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e7f3da2d",
+   "execution_count": 4,
+   "id": "28dfb731",
    "metadata": {},
    "outputs": [
     {
@@ -104,21 +82,19 @@
     }
    ],
    "source": [
-    "function divisors(n::Int64)::Int64\n",
+    "function divisors(n)\n",
     "    i = 1\n",
-    "    tri = 0 # init\n",
-    "    while length(factors(tri)) <= n\n",
-    "        tri = triangular_number(i)\n",
+    "    while length(factors(sum(1:i))) <= n\n",
     "        i += 1\n",
     "    end\n",
-    "    return tri\n",
+    "    return sum(1:i)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "48ecb1e1",
+   "execution_count": 5,
+   "id": "bda98c2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "bb01290c",
    "metadata": {},
    "outputs": [
@@ -135,7 +111,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  199.449 s (40465 allocations: 13.26 MiB)\n"
+      "  199.327 s (40464 allocations: 13.26 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "76576500"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime divisors(500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2fe9a71",
+   "metadata": {},
+   "source": [
+    "#### Solution 2 (number of factors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3e4972cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "factors (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function factors(n)::Int64\n",
+    "    number_of_factors = 0\n",
+    "    for i in 1:isqrt(n)\n",
+    "        if i*i == n\n",
+    "            number_of_factors += 1\n",
+    "        elseif n%i == 0\n",
+    "            number_of_factors += 2\n",
+    "        end\n",
+    "    end\n",
+    "    return number_of_factors\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "28744fd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "divisors (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function divisors(n)\n",
+    "    i = 1\n",
+    "    while factors(sum(1:i)) <= n\n",
+    "        i += 1\n",
+    "    end\n",
+    "    return sum(1:i)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "97a9c48c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@assert divisors(5) == 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2c138201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  48.523 ms (0 allocations: 0 bytes)\n"
      ]
     },
     {
