--- a/julia/problem_014.ipynb
+++ b/julia/problem_014.ipynb
@@ -64,7 +64,7 @@
    "id": "4638a8b2",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (sequence vector)"
    ]
   },
   {
@@ -88,11 +88,7 @@
     "    sequence = Int64[]\n",
     "    while n != 1\n",
     "        push!(sequence, n)\n",
-    "        if iseven(n)\n",
-    "            n = even(n)\n",
-    "        else\n",
-    "            n = odd(n)\n",
-    "        end\n",
+    "        iseven(n) ? n = even(n) : n = odd(n)\n",
     "    end\n",
     "    push!(sequence, 1)\n",
     "    return sequence\n",
@@ -102,16 +98,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8ae2547d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@assert collatz(13) == [13, 40, 20, 10, 5, 16, 8, 4, 2, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "e5fffb60",
    "metadata": {},
    "outputs": [
@@ -119,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.244 s (4220342 allocations: 3.10 GiB)\n"
+      "  1.183 s (4220342 allocations: 3.10 GiB)\n"
      ]
     },
     {
@@ -144,12 +130,12 @@
    "id": "ae83a515",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 2 (sequence counter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1bdf60bf",
    "metadata": {},
    "outputs": [
@@ -168,11 +154,7 @@
     "    counter = 1\n",
     "    while n != 1\n",
     "        counter += 1\n",
-    "        if iseven(n)\n",
-    "            n = even(n)\n",
-    "        else\n",
-    "            n = odd(n)\n",
-    "        end\n",
+    "        iseven(n) ? n = even(n) : n = odd(n)\n",
     "    end\n",
     "    return counter\n",
     "end"
@@ -180,17 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "addac518",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@assert collatz(13) == 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "14d4465a",
    "metadata": {},
    "outputs": [
@@ -198,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  776.038 ms (0 allocations: 0 bytes)\n"
+      "  748.158 ms (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -224,6 +196,68 @@
     "    end\n",
     "    starting\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d4ac324",
+   "metadata": {},
+   "source": [
+    "#### Solution 3 (oneliner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ba4202e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "collatz (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function collatz(n)\n",
+    "    counter = 1\n",
+    "    while n != 1\n",
+    "        counter += 1\n",
+    "        iseven(n) ? n = even(n) : n = odd(n)\n",
+    "    end\n",
+    "    return counter\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a11a30b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  749.364 ms (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "837799"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime last(maximum((collatz(n), n) for n in 1:1_000_000, dims=1))"
    ]
   }
  ],
