--- a/julia/problem_015.ipynb
+++ b/julia/problem_015.ipynb
@@ -10,6 +10,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "011c2974",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0d6ac255",
    "metadata": {},
@@ -36,15 +46,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a68b9435",
+   "metadata": {},
+   "source": [
+    "#### Solution 1 (custom function)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9d7f9afa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "binom (generic function with 1 method)"
+       "P (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -52,7 +70,7 @@
     }
    ],
    "source": [
-    "binom(n, k)::BigInt = factorial(big(n))/(factorial(big(n-k))*factorial(big(k)))"
+    "P(n, k)::BigInt = factorial(big(n))/(factorial(big(n-k))*factorial(big(k)))"
    ]
   },
   {
@@ -65,20 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8078f674",
+   "execution_count": 3,
+   "id": "264f6ae4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@assert binom(4, 2) == 6"
+    "@assert P(4, 2) == 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "90e6f75e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  556.011 ns (27 allocations: 680 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -90,17 +115,42 @@
     }
    ],
    "source": [
-    "binom(40, 20)"
+    "@btime P(40, 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f96ef6df",
+   "metadata": {},
+   "source": [
+    "#### Solution 2 (build-in function)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "29bba315",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.875 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "137846528820"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "@assert binom(40, 20) == binomial(40, 20) # validate with Julia built-in function 'binominal()'"
+    "@btime binomial(40, 20)"
    ]
   },
   {
@@ -108,8 +158,7 @@
    "id": "e13a2592",
    "metadata": {},
    "source": [
-    "Sources:\n",
-    "* https://en.wikipedia.org/wiki/Lattice_path\n",
+    "Source:\n",
     "* https://stemhash.com/counting-lattice-paths\n"
    ]
   }
