--- a/julia/problem_067.ipynb
+++ b/julia/problem_067.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "c6409fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "e68c6350",
    "metadata": {},
    "outputs": [
@@ -25,9 +35,11 @@
    ],
    "source": [
     "file_name = \"0067_triangle.txt\"\n",
-    "if isfile(\"../data/\" * file_name)\n",
+    "file_path = \"../data/\"\n",
+    "\n",
+    "if isfile(file_path * file_name)\n",
     "    println(\"Reading file ...\")\n",
-    "    raw = open(\"../data/\" * file_name) do f\n",
+    "    raw = open(file_path * file_name) do f\n",
     "        readlines(f)\n",
     "    end\n",
     "else\n",
@@ -42,17 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5765fb74",
+   "execution_count": 3,
+   "id": "33516055",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "triangle (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "triangle = [[parse(Int64, item) for item in elem] for elem in [split(line) for line in raw]];"
+    "function triangle(raw)\n",
+    "    return [[parse(Int64, val) for val in split(line)] for line in raw]\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1c7149f5",
    "metadata": {},
    "outputs": [
@@ -78,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fc8f5197",
    "metadata": {},
    "outputs": [
@@ -86,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.023260 seconds (26.98 k allocations: 1.866 MiB, 99.33% compilation time)\n"
+      "  343.791 μs (5405 allocations: 803.89 KiB)\n"
      ]
     },
     {
@@ -100,7 +124,7 @@
     }
    ],
    "source": [
-    "@time maximum_path_sum(triangle)"
+    "@btime maximum_path_sum(triangle(raw))"
    ]
   }
  ],
