--- a/julia/problem_028.ipynb
+++ b/julia/problem_028.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eea5bf7a",
+   "id": "4289b3d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,38 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ef74e26",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "diagonal (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function diagonal(n)\n",
-    "    x = n*n\n",
-    "    a = 1\n",
-    "    counter = 1\n",
-    "    nums = []\n",
-    "    while a < x\n",
-    "        push!(nums, a)\n",
-    "        a += 2*counter\n",
-    "        counter +=1\n",
-    "    end\n",
-    "    return nums \n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "897fed18",
+   "id": "6d848674",
    "metadata": {},
    "outputs": [
     {
@@ -67,34 +36,30 @@
     }
    ],
    "source": [
-    "function number_spiral_diagonals(n)\n",
-    "    diagonal1 = diagonal(n)\n",
-    "    diagonal2 = [2x for x in 1:(length(diagonal1)-1)÷2 for y in 1:2] + diagonal1[2:end]\n",
-    "    return sort(append!(diagonal1, diagonal2))\n",
+    "function number_spiral_diagonals(dims)\n",
+    "    diagonal_sum = 1\n",
+    "    diagonal_corner = 1\n",
+    "    for s in 3:2:dims # side length\n",
+    "        for _ in 1:4 # diagonal corner\n",
+    "            diagonal_corner += s - 1\n",
+    "            diagonal_sum += diagonal_corner\n",
+    "        end\n",
+    "    end\n",
+    "    return diagonal_sum\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9c7a40c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@assert sum(number_spiral_diagonals(5)) == 101"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a592de19",
+   "execution_count": 3,
+   "id": "2acad9c5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  432.625 μs (5436 allocations: 208.61 KiB)\n"
+      "  1.500 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -108,7 +73,7 @@
     }
    ],
    "source": [
-    "@btime sum(number_spiral_diagonals(1001))"
+    "@btime number_spiral_diagonals(1001)"
    ]
   }
  ],
