--- a/julia/problem_033.ipynb
+++ b/julia/problem_033.ipynb
@@ -12,63 +12,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "81024e70",
+   "id": "6187e51d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select fractions less than 1\n",
-    "a = [(n, d) for n in 10:99, d in 10:99 if n / d < 1];"
+    "using BenchmarkTools"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dba2fbb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cancellation options 4?/?8 (like 49/98) --> note: digit() returns digits in reverse order\n",
-    "b = [(n, d) for (n, d) in a if digits(n)[1] == digits(d)[2]];"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e9b77d16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select the 1-digit nom/denom fractions that equals their 2-digit equivalents\n",
-    "c = [[n, d, digits(n)[2], digits(d)[1], digits(n)[1]] for (n, d) in b if digits(n)[2]/digits(d)[1] == n/d];"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e25f1320",
+   "id": "81024e70",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1//4 × 2//5 × 1//5 × 1//2 = 1//100\n"
+      "  239.792 μs (8836 allocations: 811.73 KiB)\n"
      ]
-    }
-   ],
-   "source": [
-    "# Print fraction product\n",
-    "frac = [row[3]//row[4] for row in c]\n",
-    "push!(frac, prod([row[3]//row[4] for row in c]'))\n",
-    "println(\"$(frac[1]) × $(frac[2]) × $(frac[3]) × $(frac[4]) = $(frac[5])\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "36ea5b4f",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
@@ -80,8 +43,21 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "denominator(prod([row[3]//row[4] for row in c]'))"
+    "@btime begin\n",
+    "\n",
+    "    # Select fractions less than 1\n",
+    "    a = [(n, d) for n in 10:99, d in 10:99 if n / d < 1]\n",
+    "\n",
+    "    # Cancellation options 4?/?8 (like 49/98) --> note: digit() returns digits in reverse order\n",
+    "    b = [(n, d) for (n, d) in a if digits(n)[1] == digits(d)[2]]\n",
+    "\n",
+    "    # Select the 1-digit nom/denom fractions that equals their 2-digit equivalents\n",
+    "    c = [[n, d, digits(n)[2], digits(d)[1], digits(n)[1]] for (n, d) in b if digits(n)[2]/digits(d)[1] == n/d]\n",
+    "\n",
+    "    # Denominator value\n",
+    "    denominator(prod([row[3]//row[4] for row in c]))\n",
+    "    \n",
+    "end"
    ]
   }
  ],
