--- a/julia/problem_036.ipynb
+++ b/julia/problem_036.ipynb
@@ -5,8 +5,8 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 35\n",
-    "https://projecteuler.net/problem=35"
+    "## Problem 36\n",
+    "https://projecteuler.net/problem=36"
    ]
   },
   {
@@ -16,19 +16,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Primes, BenchmarkTools"
+    "using BenchmarkTools"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "40583963",
+   "id": "fedbf911",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "rotation (generic function with 1 method)"
+       "is_palindromic (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -36,54 +36,26 @@
     }
    ],
    "source": [
-    "function rotation(n)\n",
-    "    rotations = Int64[]\n",
-    "    d = reverse(append!(digits(n), digits(n)))\n",
-    "    l = ndigits(n)\n",
-    "    for i in 1:l\n",
-    "        push!(rotations, parse(Int64, join(d[i:i+l-1])))\n",
-    "    end\n",
-    "    return rotations\n",
-    "end"
+    "is_palindromic(n) = digits(n) == reverse(digits(n)) && digits(n, base=2) == reverse(digits(n, base=2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c03057af",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "is_circular (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "is_circular(n) = all(isprime, rotation(n))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5a1f4c5e",
+   "id": "bc38d7dc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  238.721 ms (7726957 allocations: 394.00 MiB)\n"
+      "  83.655 ms (3005996 allocations: 317.06 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "55"
+       "872187"
       ]
      },
      "metadata": {},
@@ -91,7 +63,7 @@
     }
    ],
    "source": [
-    "@btime count(is_circular, primes(999_999))"
+    "@btime sum(findall(is_palindromic, 1:999_999))"
    ]
   }
  ],
